<resources>
    <string name="app_name">25B-11345B-PacmanRace</string>
    <string name="move_left">Move left</string>
    <string name="move_right">Move right</string>
    <string name="score_0">Score: 0</string>
    <string name="distance_0">Distance: 0</string>
    <string name="start_game">Start Game</string>
    <string name="high_scores">High Scores</string>
    <string name="tilt_movement">Tilt to Move Left/Right</string>
    <string name="show_location">Show Location</string>
    <string name="_2025_05_13">2025–05–13</string>
    <string name="_12">12</string>
    <string name="_2300m">2300m</string>
    <string name="mode_icon">Game speed mode icon</string>
    <string name="sort_by">Sort by:</string>
    <string name="filter_by_mode">Filter by mode:</string>
    <string name="score_title">Score</string>
    <string name="distance_title">Distance</string>
    <string name="date_title">Date</string>
    <string name="mode_title">Mode</string>
    <string name="location_title">Location</string>
    <string name="back">Back</string>
    <string name="pacman_icon">pacman icon</string>
    <string name="ghost_icon">ghost icon</string>
    <string name="welcome_title">Welcome to Pacman Race</string>
    <string-array name="sort_options">
        <item>Score</item>
        <item>Distance</item>
    </string-array>
    <string-array name="filter_options">
        <item>All</item>
        <item>Fast</item>
        <item>Slow</item>
    </string-array>
    <string name="speed_mode">Speed Mode </string>
    <string name="tilt_speed_mode">Tilt to Adjust Speed</string>
    <string name="manual_speed_mode">Manual Speed Selection</string>
    <string name="fast">Fast </string>

</resources>