<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="48dp"
    android:background="@color/background_soft_blue">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_game"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/start_game"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/purple_300"
        app:cornerRadius="12dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_scores"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/high_scores"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/purple_300"
        app:cornerRadius="12dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>

    <Switch
        android:id="@+id/switch_sensor_movement"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/tilt_movement"
        android:layout_marginBottom="24dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</LinearLayout>