<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_soft_blue"
    tools:context=".activities.HighScoresActivity">

    <TextView
        android:id="@+id/high_scores_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_scores"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Sort By Label -->
    <TextView
        android:id="@+id/text_sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/high_scores_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"/>

    <!-- Sort Spinner -->
    <Spinner
        android:id="@+id/high_scores_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sort_options"
        app:layout_constraintTop_toBottomOf="@id/text_sort_by"
        app:layout_constraintStart_toStartOf="@id/text_sort_by"
        android:layout_marginTop="4dp"/>

    <!-- Filter By Label -->
    <TextView
        android:id="@+id/text_filter_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_mode"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/high_scores_title"
        app:layout_constraintStart_toEndOf="@id/high_scores_spinner"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"/>

    <!-- Filter Spinner -->
    <Spinner
        android:id="@+id/high_scores_filter_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/filter_options"
        app:layout_constraintTop_toBottomOf="@id/text_filter_by"
        app:layout_constraintStart_toStartOf="@id/text_filter_by"
        android:layout_marginTop="4dp"/>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/high_scores_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/high_scores_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
